--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@
   color: #61dafb;
 }
 
+.navLink {
+  text-decoration: none;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
