--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,35 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.bandBio {
+  margin-bottom: 2em;
+}
+
+.bandHeader {
+  margin: 2em 0 1em 0;
+  text-align: center;
+}
+
+.bandPhoto {
+  margin-bottom: 2em;
+}
+
+.bandWebsite {
+  text-align: center;
+}
+
+.navLink {
+  color: black;
+  transition: all 300ms ease-in-out;
+}
+
+.navLink:hover {
+  color: red;
+  text-decoration: none;
+}
+
+.spotifyPlayer {
+  text-align: center;
+  margin-bottom: 2em;
+}
