--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,10 @@ code {
   text-align: center;
 }
 
+.carouselImage {
+  height: 200px;
+}
+
 .navLink {
   color: black;
   transition: all 300ms ease-in-out;
