--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -1,3 +1,7 @@
+button {
+  text-transform: uppercase;
+}
+
 h2 {
   font-size: 1.25em;
   text-align: center;
@@ -5,6 +9,7 @@ h2 {
 
 h3 {
   text-align: center;
+  text-transform: uppercase;
 }
 
 .homeButtons {
@@ -16,5 +21,4 @@ h3 {
   height: 189px;
   margin-top: 1em;
 }
-
 
