Map over band info array to generate thumbnails for home page

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -8,3 +8,13 @@
 a {
   text-transform: uppercase;
 }
+
+.navLink {
+  color: white;
+  transition: all 500ms ease-in-out;
+}
+
+.navLink:hover {
+  color: lightgray;
+  text-decoration: none;
+}
