Add parallax scroll, format style for web and mobile

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,14 @@
 #footerContainer p {
   text-align: center;
   text-transform: uppercase;
+  font-size: 1.5em;
+}
+
+#footerContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 150px;
 }
 
 a {
